--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ tmp
 extensions/vp9/src/main/jni/libvpx
 extensions/vp9/src/main/jni/libvpx_android_configs
 extensions/vp9/src/main/jni/libyuv
+extensions/vp9/.cxx
 
 # AV1 extension
 extensions/av1/src/main/jni/cpu_features
