--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ extensions/cronet/jniLibs/*
 extensions/cronet/libs/*
 !extensions/cronet/libs/README.md
 /extensions/vp9/.cxx/
+/demos/main/withExtensions/
