--- a/demos/main/build.gradle
+++ b/demos/main/build.gradle
@@ -62,6 +62,7 @@ android {
 }
 
 dependencies {
+    println("====> modulePrefix:" + modulePrefix)
     implementation 'androidx.annotation:annotation:' + androidxAnnotationVersion
     implementation 'androidx.appcompat:appcompat:' + androidxAppCompatVersion
     implementation 'com.google.android.material:material:1.1.0'
